# lab08_hw

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  Dockerfile  LICENSE  README.md  build.sh
.github/workflows/: CI.yml  release.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
